--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "auth0-js": "^9.9.0",
     "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
